--- a/src/main_pages/Projects/Projects.css
+++ b/src/main_pages/Projects/Projects.css
@@ -7,9 +7,17 @@
   height: 100%;
   width: 100%;
 }
+
 .projectsStyle {
   font-family: "Courier Prime", monospace;
   margin: 50px;
+}
+
+@media (max-width: 650px) {
+  .projectsStyle {
+    font-family: "Courier Prime", monospace;
+    margin: 10px;
+  }
 }
 
 p {
